--- a/_posts/2015-07-21-lisao.md
+++ b/_posts/2015-07-21-lisao.md
@@ -4,118 +4,122 @@ title:  "离骚 --- 屈原"
 date:   2015-07-21 21:30:33
 categories: jekyll update
 ---
-帝高阳之<ruby>苗<rt>miáo</rt>裔<rt>yì</rt></ruby>兮，朕皇考曰<ruby>伯<rt>bó</rt>庸<rt>yōng</rt></ruby>。   
+<section>
+				
+帝高阳之<ruby>苗<rt>miáo</rt>裔<rt>yì</rt>兮<rt>xī</rt></ruby>，朕皇考曰<ruby>伯<rt>bó</rt>庸<rt>yōng</rt></ruby>。   
 <ruby>摄<rt>shè</rt></ruby>提贞于孟<ruby>陬<rt>zōu</rt></ruby>兮，惟<ruby>庚<rt>gēng</rt>寅<rt>yín</rt></ruby>吾以降。      
-皇<ruby>览<rt>lǎn</rt>揆<rt>kuí</rt></ruby>余初度兮，<ruby>肇<rt>zhào</rt>锡<rt>cì</rt></ruby>余以嘉名：  
+皇<ruby>览<rt>lǎn</rt>揆<rt>kuí</rt></ruby>余初度兮，<ruby>肇<rt>zhào</rt></ruby>锡余以嘉名：(”锡"通“<ruby>赐<rt>cì</rt></ruby>”)  
 名余<ruby>曰<rt>yuē</rt></ruby>正则兮，字余曰<ruby>灵<rt>líng</rt>均<rt>jūn</rt></ruby>。  
 纷<ruby>吾<rt>wú</rt></ruby>既有此内美兮，又重之以修能。  
-<ruby>扈<rt>hù</rt></ruby>江离与<ruby>辟<rt>pì</rt>芷<rt>zhǐ</rt></ruby>兮，<ruby>纫<rt>niǔ</rt></ruby>秋兰以为<ruby>佩<rt>pèi</rt></ruby>。    
+<ruby>扈<rt>hù</rt></ruby>江离与<ruby>辟<rt>pì</rt>芷<rt>zhǐ</rt></ruby>兮，<ruby>纽<rt>niǔ</rt></ruby>秋兰以为<ruby>佩<rt>pèi</rt></ruby>。    
 <ruby>汩<rt>yù</rt></ruby>余若将不及兮，恐年岁之不吾与。  
 朝<ruby>搴<rt>qiān</rt>阰<rt>pí</rt></ruby>之木兰兮，夕<ruby>揽<rt>lǎn</rt></ruby>洲之<ruby>宿<rt>sù</rt>莽<rt>mǎng</rt></ruby>。  
 日月忽其不<ruby>淹<rt>yān</rt></ruby>兮，春与秋其代序。  
 惟草木之零落兮，恐美人之迟暮。  
-不抚壮而弃<ruby>秽<rt>huì</rt></ruby>兮，何不改此度？  
-<ruby>乘<rt>chéng</rt>骐<rt>qí</rt>骥<rt>jì</rt></ruby>以驰骋兮，来吾道<ruby>夫<rt>fú</rt></ruby>先路！    
+不<ruby>抚<rt>fǔ</rt></ruby>壮而弃<ruby>秽<rt>huì</rt></ruby>兮，何不改此度？  
+<ruby>乘<rt>chéng</rt>骐<rt>qí</rt>骥<rt>jì</rt></ruby>以驰骋兮，来吾道<ruby>夫<rt>fú</rt></ruby>先路！
 
-昔三后之纯粹兮，固众芳之所在。  
-杂申椒与菌桂兮，岂惟纫夫蕙茝！  
-彼尧舜之耿介兮，既遵道而得路。  
-何桀纣之昌披兮，夫惟捷径以窘步。    
-惟夫党人之偷乐兮，路幽昧以险隘。  
-岂余身之惮殃兮，恐皇舆之败绩！    
-忽奔走以先后兮，及前王之踵武。  
-荃不察余之中情兮，反信谗而齌怒。    
-余固知謇謇之为患兮，忍而不能舍也。  
-指九天以为正兮，夫惟灵修之故也。    
-曰黄昏以为期兮，羌中道而改路！  
-初既与余成言兮，后悔遁而有他。    
-余既不难夫离别兮，伤灵修之数化。  
+昔三后之<ruby>纯<rt>chún</rt>粹<rt>cuì</rt></ruby>兮，固众芳之所在。  
+杂申<ruby>椒<rt>jiāo</rt></ruby>与<ruby>菌<rt>jūn</rt>桂<rt>guì</rt></ruby>兮，岂惟<ruby>纫<rt>rèn</rt></ruby>夫<ruby>蕙<rt>huì</rt>茝<rt>chǎi</rt></ruby>！  
+彼<ruby>尧<rt>yáo</rt>舜<rt>shùn</rt></ruby>之<ruby>耿<rt>gěng</rt>介<rt>jiè</rt></ruby>兮，既遵道而得路。  
+何<ruby>桀<rt>jié</rt>纣<rt>zhòu</rt></ruby>之<ruby>昌<rt>chāng</rt>披<rt>pī</rt></ruby>兮，夫惟捷径以<ruby>窘<rt>jiǒng</rt></ruby>步。    
+惟夫党人之偷乐兮，路<ruby>幽<rt>yōu</rt>昧<rt>mèi</rt></ruby>以<ruby>险<rt>xiǎn</rt>隘<rt>ài</rt></ruby>。  
+岂余身之<ruby>惮<rt>dàn</rt>殃<rt>yāng</rt></ruby>兮，恐皇<ruby>舆<rt>yú</rt></ruby>之败绩！    
+忽奔走以先后兮，及前王之<ruby>踵<rt>zhǒng</rt></ruby>武。  
+<ruby>荃<rt>quán</rt></ruby>不察余之中情兮，反信<ruby>谗<rt>chán</rt></ruby>而<ruby>齌<rt>jì</rt></ruby>怒。    
+余固知<ruby>謇<rt>jiǎn</rt></ruby>謇之为患兮，忍而不能舍也。  
+指九天以为正兮，<ruby>夫<rt>fú</rt></ruby>惟灵修之故也。    
+<ruby>曰<rt>yuē</rt></ruby>黄昏以为期兮，<ruby>羌<rt>qiāng</rt></ruby>中道而改路！  
+初既与余成言兮，后悔<ruby>遁<rt>dùn</rt></ruby>而有他。    
+余既不难夫离别兮，伤灵修之<ruby>数<rt>shuò</rt>化<rt>huà</rt></ruby>。  
 
-余既滋兰之九畹兮，又树蕙之百亩。  
-畦留夷与揭车兮，杂杜衡与芳芷。   
-冀枝叶之峻茂兮，愿俟时乎吾将刈。  
-虽萎绝其亦何伤兮，哀众芳之芜秽。  
-众皆竞进以贪婪兮，凭不厌乎求索。  
-羌内恕己以量人兮，各兴心而嫉妒。   
-忽驰骛以追逐兮，非余心之所急。  
-老冉冉其将至兮，恐修名之不立。  
-朝饮木兰之坠露兮，夕餐秋菊之落英。  
-苟余情其信姱以练要兮，长顑颔亦何伤！    
-揽木根以结茞兮，贯薜荔之落蕊。  
-矫菌桂以纫蕙兮，索胡绳之纚纚。    
+余既<ruby>滋<rt>zī</rt></ruby>兰之九<ruby>畹<rt>wǎn</rt></ruby>兮，又树<ruby>蕙<rt>huì</rt></ruby>之百亩。  
+<ruby>畦<rt>qí</rt>留<rt>liú</rt>夷<rt>liú</rt></ruby>与<ruby>揭<rt>jiē</rt>车<rt>chē</rt></ruby>兮，杂<ruby>杜<rt>dù</rt>衡<rt>héng</rt></ruby>与<ruby>芳<rt>fāng</rt>芷<rt>zhǐ</rt></ruby>。   
+<ruby>冀<rt>jì</rt></ruby>枝叶之<ruby>峻<rt>jùn</rt>茂<rt>mào</rt></ruby>兮，愿<ruby>俟<rt>sì</rt></ruby>时乎吾将<ruby>刈<rt>yì</rt></ruby>。  
+虽<ruby>萎<rt>wěi</rt>绝<rt>jué</rt></ruby>其亦何伤兮，哀众芳之<ruby>芜<rt>wú</rt>秽<rt>huì</rt></ruby>。  
+众皆竞进以贪<ruby>婪<rt>lán</rt></ruby>兮，凭不厌乎求<ruby>索<rt>suǒ</rt></ruby>。  
+羌内恕己以量人兮，各兴心而<ruby>嫉<rt>jí</rt>妒<rt>dù</rt></ruby>。   
+忽驰<ruby>骛<rt>wù</rt></ruby>以追<ruby>逐<rt>zhú</rt></ruby>兮，非余心之所急。  
+老<ruby>冉<rt>rǎn</rt></ruby>冉其将至兮，恐修名之不立。  
+朝饮木兰之坠露兮，夕餐秋菊之<ruby>落<rt>luò</rt>英<rt>yīng</rt></ruby>。  
+<ruby>苟<rt>gǒu</rt></ruby>余情其信<ruby>姱<rt>kuā</rt></ruby>以练<ruby>要<rt>yāo</rt></ruby>兮，长<ruby>顑<rt>kǎn</rt>颔<rt>hàn</rt></ruby>亦何伤！    
+揽木根以结茞兮，贯<ruby>薜<rt>bì</rt>荔<rt>lì</rt></ruby>之落<ruby>蕊<rt>ruǐ</rt></ruby>。  
+矫菌桂以纫蕙兮，索胡绳之<ruby>纚<rt>shĭ</rt></ruby>纚。    
 謇吾法夫前修兮，非世俗之所服。  
-虽不周于今之人兮，愿依彭咸之遗则。    
+虽不周于今之人兮，愿依<ruby>彭<rt>péng</rt>咸<rt>xián</rt></ruby>之遗则。    
 
-长太息以掩涕兮，哀民生之多艰。  
-余虽好修姱以（革几）羁兮，謇朝谇而夕替。    
-既替余以蕙（纟襄）兮，又申之以揽茝。  
-亦余心之所善兮，虽九死其犹未悔。    
-怨灵修之浩荡兮，终不察夫民心。  
-众女嫉余之蛾眉兮，谣诼谓余以善淫。    
-固时俗之工巧兮，偭规矩而改错。  
-背绳墨以追曲兮，竞周容以为度。    
-忳郁邑余侘傺兮，吾独穷困乎此时也。  
-宁溘死以流亡兮，余不忍为此态也。    
-鸷鸟之不群兮，自前世而固然。  
-何方圜之能周兮，夫孰异道而相安？    
-屈心而抑志兮，忍尤而攘诟。  
+长<ruby>太<rt>tài</rt>息<rt>xī</rt></ruby>以<ruby>掩<rt>yǎn</rt>涕<rt>tì</rt></ruby>兮，哀民生之多艰。  
+余虽好修<ruby>姱<rt>kuā</rt></ruby>以<ruby>鞿<rt>jī</rt>羁<rt>jī</rt></ruby>兮，<ruby>謇<rt>jiǎn</rt>朝<rt>zhāo</rt>谇<rt>suì</rt></ruby>而夕替。    
+既替余以<ruby>蕙<rt>huì</rt>纕<rt>xiāng</rt></ruby>兮，又申之以<ruby>揽<rt>lǎn</rt>茝<rt>chǎi</rt></ruby>。  
+<ruby>亦<rt>yì</rt></ruby>余心之所善兮，虽九死其<ruby>犹<rt>yóu</rt></ruby>未悔。    
+怨灵修之<ruby>浩<rt>hào</rt>荡<rt>dàng</rt></ruby>兮，终不<ruby>察<rt>chá</rt>夫<rt>fú</rt></ruby>民心。  
+众女<ruby>嫉<rt>jí</rt></ruby>余之蛾眉兮，<ruby>谣<rt>yáo</rt>诼<rt>zhuó</rt>谓<rt>wèi</rt></ruby>余以善淫。    
+固时俗之工巧兮，<ruby>偭<rt>miǎn</rt></ruby>规矩而改错。  
+背绳墨以追<ruby>曲<rt>qǔ</rt></ruby>兮，竞周容以为度。    
+<ruby>忳<rt>tún</rt>郁<rt>yù</rt>邑<rt>yì</rt></ruby>余<ruby>侘<rt>chà</rt>傺<rt>chì</rt></ruby>兮，吾独穷困乎此时也。  
+宁<ruby>溘<rt>kè</rt></ruby>死以流亡兮，余不忍为此态也。    
+<ruby>鸷<rt>zhì</rt></ruby>鸟之不群兮，自前世而固然。  
+何方<ruby>圜<rt>yuán</rt></ruby>之能周兮，夫<ruby>孰<rt>shú</rt></ruby>异道而相安？    
+屈心而抑志兮，忍<ruby>尤<rt>yóu</rt></ruby>而<ruby>攘<rt>rǎng</rt>诟<rt>gòu</rt></ruby>。  
 伏清白以死直兮，固前圣之所厚。    
 
-悔相道之不察兮，延伫乎吾将反。  
-回朕车以复路兮，及行迷之未远。    
-步余马于兰皋兮，驰椒丘且焉止息。  
+悔<ruby>相<rt>xiàng</rt></ruby>道之不察兮，<ruby>延<rt>yán</rt>伫<rt>zhù</rt></ruby>乎吾将反。  
+回<ruby>朕<rt>zhèn</rt></ruby>车以复路兮，及行迷之未远。    
+步余马于<ruby>兰<rt>lán</rt>皋<rt>gāo</rt></ruby>兮，驰<ruby>椒<rt>jiāo</rt>丘<rt>qiū</rt></ruby>且<ruby>焉<rt>yān</rt>止<rt>zhǐ</rt></ruby>息。  
 进不入以离尤兮，退将复修吾初服。    
-制芰荷以为衣兮，集芙蓉以为裳。  
-不吾知其亦已兮，苟余情其信芳。    
-高余冠之岌岌兮，长余佩之陆离。  
-芳与泽其杂糅兮，唯昭质其犹未亏。    
+制<ruby>芰<rt>jì</rt>荷<rt>hé</rt></ruby>以为衣兮，集<ruby>芙<rt>fú</rt>蓉<rt>róng</rt></ruby>以为<ruby>裳<rt>cháng</rt></ruby>。  
+不吾知其亦<ruby>已<rt>yǐ</rt></ruby>兮，苟余情其信芳。    
+高余冠之<ruby>岌<rt>jí</rt></ruby>岌兮，长余<ruby>佩<rt>pèi</rt></ruby>之陆离。  
+芳与泽其杂<ruby>糅<rt>róu</rt></ruby>兮，唯<ruby>昭<rt>zhāo</rt></ruby>质其犹未亏。    
 忽反顾以游目兮，将往观乎四荒。  
-佩缤纷其繁饰兮，芳菲菲其弥章。    
+佩缤纷其繁饰兮，芳<ruby>菲<rt>fēi</rt></ruby>菲其<ruby>弥<rt>mí</rt></ruby>章。    
 民生各有所乐兮，余独好修以为常。  
-虽体解吾犹未变兮，岂余心之可惩。    
+虽体解吾犹未变兮，岂余心之可<ruby>惩<rt>chéng</rt></ruby>。    
 
-女嬃之婵媛兮，申申其詈予，曰：  
-日鲧婞直以亡身兮，终然夭乎羽之野。    
+女<ruby>嬃<rt>xū</rt></ruby>之<ruby>婵<rt>chán</rt>媛<rt>yuán</rt></ruby>兮，申申其<ruby>詈<rt>lì</rt>予<rt>yú</rt></ruby>，曰：  
+日<ruby>鲧<rt>gǔn</rt>婞<rt>xìng</rt></ruby>直以亡身兮，终然<ruby>夭<rt>yāo</rt></ruby>乎羽之野。    
 汝何博謇而好修兮，纷独有此姱节!  
-薋菉葹以盈室兮，判独离而不服。    
-众不可户说兮，孰云察余之中情？  
-世并举而好朋兮，夫何茕独而不予听！    
+<ruby>薋<rt>cí</rt>菉<rt>lù</rt>葹<rt>shī</rt></ruby>以盈室兮，判独离而不服。    
+众不可<ruby>户<rt>hù</rt>说<rt>shuō</rt></ruby>兮，孰云察余之中情？  
+世并举而好朋兮，夫何<ruby>茕<rt>qióng</rt></ruby>独而不<ruby>予<rt>yú</rt></ruby>听！    
 
-依前圣以节中兮，喟凭心而历兹！  
-济沅湘以南征兮，就重华而敶词：    
-启九辩与九歌兮，夏康娱以自纵。  
+依前圣以节中兮，<ruby>喟<rt>kuì</rt></ruby>凭心而历<ruby>兹<rt>zī</rt></ruby>！  
+<ruby>济<rt>jì</rt>沅<rt>yuán</rt></ruby>湘以南征兮，就重华而敶词：    
+启九辩与九歌兮，夏<ruby>康<rt>kāng</rt>娱<rt>yú</rt></ruby>以自纵。  
 不顾难以图后兮，五子用失乎家巷。    
-羿淫游以佚畋兮，又好射夫封狐。  
-国乱流其鲜终兮，浞又贪夫厥家。    
-浇身被于强圉兮，纵欲而不忍。  
-日康娱而自忘兮，厥首用夫颠陨。    
-夏桀之常违兮，乃遂焉而逢殃。  
-后辛之菹醢兮，殷宗用而不长。    
-汤禹俨而祗敬兮，周论道而莫差。  
+<ruby>羿<rt>yì</rt></ruby>淫游以<ruby>佚<rt>yì</rt>畋<rt>tián</rt></ruby>兮，又好射夫封狐。  
+国乱流其<ruby>鲜<rt>xiǎn</rt></ruby>终兮，<ruby>浞<rt>zhuó</rt></ruby>又贪夫<ruby>厥<rt>jué</rt></ruby>家。    
+<ruby>浇<rt>jiāo</rt></ruby>身<ruby>被<rt>pī</rt></ruby>于强<ruby>圉<rt>yǔ</rt></ruby>兮，纵欲而不忍。  
+日康娱而自忘兮，厥首用夫<ruby>颠<rt>diān</rt>陨<rt>yǔn</rt></ruby>。    
+夏<ruby>桀<rt>jié</rt></ruby>之常违兮，乃遂焉而逢殃。(”遂"通“<ruby>坠<rt>zhuì</rt></ruby>”)  
+后辛之<ruby>菹<rt>zū</rt>醢<rt>hǎi</rt></ruby>兮，殷宗用而不长。    
+汤禹<ruby>俨<rt>yǎn</rt></ruby>而<ruby>祗<rt>zhī</rt></ruby>敬兮，周论道而莫差。  
 举贤而授能兮，修绳墨而不颇。    
-皇天无私阿兮，览民德焉错辅。  
-夫维圣哲以茂行兮，苟得用此下土。    
-瞻前而顾后兮，相观民之计极。  
-夫孰非义而可用兮，孰非善而可服！    
-阽余身而危死兮，揽余初其犹未悔！  
-不量凿而正枘兮，固前修以菹醢。    
-曾歔欷余郁邑兮，哀朕时之不当。  
-揽茹蕙以掩涕兮，沾余襟之浪浪。    
+皇天无私<ruby>阿<rt>ē</rt></ruby>兮，览民德焉<ruby>错<rt>cuò</rt>辅<rt>fǔ</rt></ruby>。  
+夫维圣哲以<ruby>茂<rt>mào</rt></ruby>行兮，苟得用此下土。    
+<ruby>瞻<rt>zhān</rt></ruby>前而顾后兮，相观民之计极。  
+<ruby>夫<rt>fú</rt>孰<rt>shú</rt></ruby>非义而可用兮，孰非善而可服！    
+<ruby>阽<rt>diàn</rt></ruby>余身而危死兮，揽余初其犹未悔！  
+不量<ruby>凿<rt>záo</rt></ruby>而正<ruby>枘<rt>ruì</rt></ruby>兮，固前修以菹醢。    
+<ruby>曾<rt>céng</rt>歔<rt>xū</rt>欷<rt>xī</rt></ruby>余<ruby>郁<rt>yù</rt>邑<rt>yì</rt></ruby>兮，哀朕时之不当。  
+揽<ruby>茹<rt>rú</rt>蕙<rt>huì</rt></ruby>以掩涕兮，<ruby>沾<rt>zhān</rt></ruby>余<ruby>襟<rt>jīn</rt></ruby>之浪浪。    
 
-跪敷衽以陈辞兮，耿吾既得此中正。  
-驷玉虬以乘鹥兮，溘埃风余上征。   
-朝发轫于苍梧兮，夕余至乎县圃。  
-欲少留此灵琐兮，日忽忽其将暮。    
-吾令羲和弭节兮，望崦嵫而勿迫。  
-路曼曼其修远兮，吾将上下而求索。    
-饮余马于咸池兮，总余辔乎扶桑。  
-折若木以拂日兮，聊逍遥以相羊。    
-前望舒使先驱兮，后飞廉使奔属。  
-鸾皇为余先戒兮，雷师告余以未具。    
+<ruby>跪<rt>guì</rt>敷<rt>fū</rt>衽<rt>rèn</rt></ruby>以陈辞兮，<ruby>耿<rt>gěng</rt></ruby>吾既得此中正。  
+<ruby>驷<rt>sì</rt></ruby>玉<ruby>虬<rt>qiú</rt></ruby>以<ruby>乘<rt>chéng</rt>鹥<rt>yì</rt></ruby>兮，<ruby>溘<rt>kè</rt>埃<rt>āi</rt></ruby>风余上征。   
+朝发<ruby>轫<rt>rèn</rt></ruby>于苍梧兮，夕余至乎<ruby>县<rt>xuán</rt>圃<rt>pǔ</rt></ruby>。  
+欲<ruby>少<rt>shǎo</rt></ruby>留此<ruby>灵<rt>líng</rt>琐<rt>suǒ</rt></ruby>兮，日<ruby>忽<rt>hū</rt></ruby>忽其将暮。    
+吾令<ruby>羲<rt>xī</rt></ruby>和<ruby>弭<rt>mǐ</rt></ruby>节兮，望<ruby>崦<rt>yān</rt>嵫<rt>zī</rt></ruby>而勿迫。  
+路曼曼其修远兮，吾将上下而求<ruby>索<rt>suǒ</rt></ruby>。    
+饮余马于<ruby>咸<rt>xián</rt></ruby>池兮，<ruby>总<rt>zǒng</rt></ruby>余<ruby>辔<rt>pèi</rt></ruby>乎扶桑。  
+折若木以拂日兮，聊<ruby>逍<rt>xiāo</rt>遥<rt>yáo</rt></ruby>以相羊。(”相羊"通“<ruby>徜<rt>cháng</rt>徉<rt>yáng</rt></ruby>”)    
+前望舒使先驱兮，后飞廉使奔<ruby>属<rt>zhǔ</rt></ruby>。  
+<ruby>鸾<rt>luán</rt></ruby>皇为余先戒兮，雷师告余以未具。    
 吾令凤鸟飞腾兮，继之以日夜。  
-飘风屯其相离兮，帅云霓而来御。    
-纷总总其离合兮，斑陆离其上下。  
-吾令帝阍开关兮，倚阊阖而望予。    
-时暧暧其将罢兮，结幽兰而延伫。  
-世溷浊而不分兮，好蔽美而嫉妒。    
+飘风<ruby>屯<rt>tún</rt></ruby>其相离兮，帅云<ruby>霓<rt>ní</rt></ruby>而来<ruby>御<rt>yù</rt></ruby>。    
+纷总总其离合兮，<ruby>斑<rt>bān</rt></ruby>陆离其上下。  
+吾令帝<ruby>阍<rt>hūn</rt></ruby>开关兮，<ruby>倚<rt>yǐ</rt>阊<rt>chāng</rt>阖<rt>hé</rt></ruby>而望予。    
+时<ruby>暧<rt>ài</rt></ruby>暧其将罢兮，结幽兰而延伫。  
+世<ruby>溷<rt>hùn</rt>浊<rt>zhuó</rt></ruby>而不分兮，好<ruby>蔽<rt>bì</rt></ruby>美而嫉妒。    
 
+</section>
+		
