--- a/_posts/2015-08-03-wangwei-1.md
+++ b/_posts/2015-08-03-wangwei-1.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "<ruby>辋<rt>wǎng</rt></ruby>川闲居赠<ruby>裴<rt>péi</rt></ruby>秀才<ruby>迪<rt>dí</rt></ruby> --- 王维"
+title:  "<ruby>辋<rt>wǎng</rt></ruby>川闲居赠<ruby>裴<rt>péi</rt></ruby>秀才<ruby>迪<rt>dí</rt></ruby> --- 唐&middot;王维"
 date:   2015-08-03
 categories: jekyll update
 ---  
