--- a/_posts/2015-08-08-dufu-1.md
+++ b/_posts/2015-08-08-dufu-1.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "绝句--- 唐&middot;杜甫 "
 excerpt: "公元762年，时值安史之乱，杜甫一度避往梓州（今四川省三台县）。第二年，公元763年，
-叛乱得以平定，杜甫也回到成都草堂。面对草堂内外的美景，欣喜之余，情不自禁，写下了
+叛乱得以平定，杜甫得以重回成都草堂。面对草堂内外的美景，欣喜之余，情不自禁，写下了
 这首即景小诗。" 
 date:   2015-08-08
 categories: jekyll update
