--- a/_posts/2015-08-08-caocao-1.md
+++ b/_posts/2015-08-08-caocao-1.md
@@ -13,4 +13,4 @@ categories: jekyll update
 幸甚至<ruby>哉<rt>zāi</rt></ruby>，歌以咏志。  
   
   
-![guancanghai]({{ site.url }}/image/canghai.jpg)
+![guancanghai]({{ site.url }}/image/canghai.jpg)![guancanghai1]({{ site.url }}/image/canghai1.jpg)
