--- a/_posts/2015-07-21-lisao.md
+++ b/_posts/2015-07-21-lisao.md
@@ -117,6 +117,7 @@ categories: jekyll update
 纷总总其离合兮，<ruby>斑<rt>bān</rt></ruby>陆离其上下。  
 吾令帝<ruby>阍<rt>hūn</rt></ruby>开关兮，<ruby>倚<rt>yǐ</rt>阊<rt>chāng</rt>阖<rt>hé</rt></ruby>而望予。    
 时<ruby>暧<rt>ài</rt></ruby>暧其将罢兮，结幽兰而延伫。  
-世<ruby>溷<rt>hùn</rt>浊<rt>zhuó</rt></ruby>而不分兮，好<ruby>蔽<rt>bì</rt></ruby>美而嫉妒。    
-
+世<ruby>溷<rt>hùn</rt>浊<rt>zhuó</rt></ruby>而不分兮，好<ruby>蔽<rt>bì</rt></ruby>美而嫉妒。      
+  
+未完，待续&middot;&middot;&middot;
 		
