gh_dutou.jpg_guyan.jpg_09/08/2015

--- a/_posts/2015-08-03-wangwei-1.md
+++ b/_posts/2015-08-03-wangwei-1.md
@@ -12,4 +12,4 @@ categories: jekyll update
 墟里上孤烟。    
 复值接<ruby>舆<rt>yú</rt></ruby>醉，   
 狂歌五柳前。  
-![wangwei]({{ site.url }}/image/hanshan.jpg)
+![chaimen]({{ site.url }}/image/hanshan.jpg)![dutou]({{ site.url }}/image/dutou.jpg)![guyan]({{ site.url }}/image/guyan.jpg)
