--- a/_posts/2015-08-03-wangwei-1.md
+++ b/_posts/2015-08-03-wangwei-1.md
@@ -12,4 +12,5 @@ categories: jekyll update
 墟里上孤烟。    
 复值接<ruby>舆<rt>yú</rt></ruby>醉，   
 狂歌五柳前。  
+![langsong]({{ site.url }}/audio/haishanghua.mp3)    
 ![chaimen]({{ site.url }}/image/hanshan.jpg)![dutou]({{ site.url }}/image/dutou.jpg)![guyan]({{ site.url }}/image/guyan.jpg)
