--- a/_posts/2015-08-03-wangwei-1.md
+++ b/_posts/2015-08-03-wangwei-1.md
@@ -12,5 +12,10 @@ categories: jekyll update
 墟里上孤烟。    
 复值接<ruby>舆<rt>yú</rt></ruby>醉，   
 狂歌五柳前。  
-![langsong]({{ site.url }}/audio/haishanghua.mp3)    
+![langsong]({{ site.url }}/audio/haishanghua.mp3)   
+<audio controls preload="metadata" autoplay="autoplay">
+			<source src="audio/haishanghua.mp3" type="audio/mpeg">
+			
+			Your browser does not support the audio element.
+		</audio>   
 ![chaimen]({{ site.url }}/image/hanshan.jpg)![dutou]({{ site.url }}/image/dutou.jpg)![guyan]({{ site.url }}/image/guyan.jpg)
