--- a/_posts/2015-08-03-wangwei-1.md
+++ b/_posts/2015-08-03-wangwei-1.md
@@ -20,5 +20,6 @@ categories: jekyll update
   
   
 <audio controls preload="none">
-  <source src="{{ site.url }}/audio/wangwei_hanshan.m4a" type="audio/mpeg">
+  <source src="http://jixizh.github.io/jixizhgh/audio/haishanghua.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
 </audio> 
