gh_dutou.jpg_guyan.jpg_09/08/2015

--- a/_posts/2015-08-03-wangwei-1.md
+++ b/_posts/2015-08-03-wangwei-1.md
@@ -14,6 +14,6 @@ categories: jekyll update
 狂歌五柳前。       
 ![chaimen]({{ site.url }}/image/hanshan.jpg)![dutou]({{ site.url }}/image/dutou.jpg)![guyan]({{ site.url }}/image/guyan.jpg)  
 <audio controls preload="none">
-  <source src="http://jixizh.github.io/jixizhgh/audio/haishanghua.mp3" type="audio/mpeg">
+  <source src="http://jixizh.github.io/jixizhgh/audio/wanwei_hanshan.m4a" type="audio/mpeg">
  
 </audio> 
