--- a/_posts/2015-08-03-wangwei-1.md
+++ b/_posts/2015-08-03-wangwei-1.md
@@ -13,9 +13,8 @@ categories: jekyll update
 复值接<ruby>舆<rt>yú</rt></ruby>醉，   
 狂歌五柳前。       
 ![chaimen]({{ site.url }}/image/hanshan.jpg)![dutou]({{ site.url }}/image/dutou.jpg)![guyan]({{ site.url }}/image/guyan.jpg)  
-  
 <br>
 <audio controls preload="none">
-  <source src="http://jixizh.github.io/jixizhgh/audio/wanwei_hanshan.m4a" type="audio/mpeg">
+  <source src="{{ site.url }}/audio/wanwei_hanshan.m4a" type="audio/mpeg">
  
 </audio> 
