--- a/_posts/2015-08-06-libai-1.md
+++ b/_posts/2015-08-06-libai-1.md
@@ -9,4 +9,8 @@ categories: jekyll update
 举头望明月，  
 低头思故乡。  
   
-![jingyesi]({{ site.url }}/image/jingyesi.jpg)![jingyese1]({{ site.url }}/image/jingyesi1.jpg)
+![jingyesi]({{ site.url }}/image/jingyesi.jpg)![jingyese1]({{ site.url }}/image/jingyesi1.jpg)  
+<br>
+<audio controls preload="none">
+  <source src="{{ site.url }}/audio/libai_jingyesi.m4a" type="audio/mpeg">
+</audio>
