--- a/_posts/2015-08-08-dufu-1.md
+++ b/_posts/2015-08-08-dufu-1.md
@@ -15,3 +15,8 @@ categories: jekyll update
 
 ---
 {{ page.excerpt}}
+
+<br>
+<audio controls preload="none">
+  <source src="{{ site.url }}/audio/dufu_liangge.m4a" type="audio/mpeg">
+</audio>
