--- a/_posts/2015-08-08-dufu-1.md
+++ b/_posts/2015-08-08-dufu-1.md
@@ -1,17 +1,21 @@
 ---
 layout: post
-title:  "绝句--- 唐&middot;杜甫 "
-excerpt: "公元762年，时值安史之乱，杜甫一度避往梓州（今四川省三台县）。第二年，公元763年，
-叛乱平定，杜甫得以重回成都草堂。面对草堂内外的美景，欣喜之余，情不自禁，写下了
-这首即景小诗。" 
-date:   2015-08-08
+title:  "归园田居--- 东晋&middot;陶渊明"
+excerpt: "公元405年，陶渊明最后一次做官，任江西彭泽县令任上仅八十多天，自免去职。对官场失望厌恶，使他更加向往田园生活，归家后，作《归园田居》五首，
+          这是第一首。作者质性自然，笔墨传神，田园风光与朴实的乡村生活跃然纸上，历历在目" 
+date:   2015-08-11
 categories: jekyll update
 --- 
-
-两个黄鹂鸣翠柳，  
-一行白<ruby>鹭<rt>lù</rt></ruby>上青天。  
-窗含西岭千秋雪，  
-门<ruby>泊<rt>bó</rt></ruby>东吴万里船。
+少无适俗韵，性本爱丘山。
+误落尘网中，一去三十年。
+羁鸟恋旧林，池鱼思故渊。
+开荒南野际，守拙归园田。
+方宅十余亩，草屋八九间。
+榆柳荫后檐，桃李罗堂前。
+暧暧远人村，依依墟里烟。
+狗吠深巷中，鸡鸣桑树颠。
+户庭无尘杂，虚室有余闲。
+久在樊笼里，复得返自然。
 
 ---
 {{ page.excerpt}}
