--- a/_posts/2015-08-03-wangwei-1.md
+++ b/_posts/2015-08-03-wangwei-1.md
@@ -4,14 +4,10 @@ title:  "<ruby>辋<rt>wǎng</rt></ruby>川闲居赠<ruby>裴<rt>péi</rt></ruby>
 date:   2015-08-03
 categories: jekyll update
 ---  
-寒山转苍翠，  
-秋水日<ruby>潺<rt>chán</rt>湲<rt>yuán</rt></ruby>。  
-倚杖柴门外，  
-临风听暮蝉。  
-渡头余落日，  
-墟里上孤烟。    
-复值接<ruby>舆<rt>yú</rt></ruby>醉，   
-狂歌五柳前。  
+寒山转苍翠，秋水日<ruby>潺<rt>chán</rt>湲<rt>yuán</rt></ruby>。  
+倚杖柴门外，临风听暮蝉。  
+渡头余落日，墟里上孤烟。    
+复值接<ruby>舆<rt>yú</rt></ruby>醉，狂歌五柳前。  
 
 ---       
 ![chaimen]({{ site.url }}/image/hanshan.jpg)![dutou]({{ site.url }}/image/dutou.jpg)![guyan]({{ site.url }}/image/guyan.jpg)  
