--- a/_posts/2015-08-08-dufu-1.md
+++ b/_posts/2015-08-08-dufu-1.md
@@ -16,10 +16,11 @@ categories: jekyll update
 
 ---  
 
-<br> 
-{{ page.excerpt}}
-
 <br>
 <audio controls preload="none">
   <source src="{{ site.url }}/audio/dufu_liangge.m4a" type="audio/mpeg">
-</audio>
+</audio>  
+
+<section class="psize">
+{{ page.excerpt}}   
+</section>
