--- a/_posts/2015-08-11-taoqian-1.md
+++ b/_posts/2015-08-11-taoqian-1.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "归园田居--- 东晋&middot;陶渊明"
-excerpt: "公元405年，陶渊明最后一次做官，任江西彭泽县令任上仅八十多天，自免去职。对官场失望厌恶，使他更加向往田园生活，归家后，作《归园田居》五首，
+excerpt: "公元405年，陶渊明最后一次做官，任江西彭泽县令,上任仅八十多天，自免去职。对官场及世俗的厌恶，使他更加向往田园生活，归家后，作《归园田居》五首，
           这是第一首。作者质性自然，笔墨传神，田园风光与朴实的乡村生活跃然纸上，历历在目。" 
 date:   2015-08-11
 categories: jekyll update
