--- a/_posts/2015-07-21-lisao.md
+++ b/_posts/2015-07-21-lisao.md
@@ -4,10 +4,10 @@ title:  "离骚 --- 战国&middot;屈原"
 date:   2015-07-21 21:30:33
 categories: jekyll update
 ---
-帝高阳之<ruby>苗<rt>miáo</rt>裔<rt>yì</rt>兮<rt>xī</rt></ruby>，朕皇考曰<ruby>伯<rt>bó</rt>庸<rt>yōng</rt></ruby>。   
+帝高阳之<ruby>苗<rt>miáo</rt>裔<rt>yì</rt>兮<rt>xī</rt></ruby>，朕皇考<ruby>曰<rt>yuē</rt>伯<rt>bó</rt>庸<rt>yōng</rt></ruby>。   
 <ruby>摄<rt>shè</rt></ruby>提贞于孟<ruby>陬<rt>zōu</rt></ruby>兮，惟<ruby>庚<rt>gēng</rt>寅<rt>yín</rt></ruby>吾以降。      
 皇<ruby>览<rt>lǎn</rt>揆<rt>kuí</rt></ruby>余初度兮，<ruby>肇<rt>zhào</rt></ruby>锡余以嘉名：(”锡"通“<ruby>赐<rt>cì</rt></ruby>”)  
-名余<ruby>曰<rt>yuē</rt></ruby>正则兮，字余曰<ruby>灵<rt>líng</rt>均<rt>jūn</rt></ruby>。  
+名余曰正则兮，字余曰<ruby>灵<rt>líng</rt>均<rt>jūn</rt></ruby>。  
 纷<ruby>吾<rt>wú</rt></ruby>既有此内美兮，又重之以修能。  
 <ruby>扈<rt>hù</rt></ruby>江离与<ruby>辟<rt>pì</rt>芷<rt>zhǐ</rt></ruby>兮，<ruby>纽<rt>niǔ</rt></ruby>秋兰以为<ruby>佩<rt>pèi</rt></ruby>。    
 <ruby>汩<rt>yù</rt></ruby>余若将不及兮，恐年岁之不吾与。  
