--- a/_posts/2015-07-21-lisao.md
+++ b/_posts/2015-07-21-lisao.md
@@ -14,7 +14,7 @@ categories: jekyll update
 朝<ruby>搴<rt>qiān</rt>阰<rt>pí</rt></ruby>之木兰兮，夕<ruby>揽<rt>lǎn</rt></ruby>洲之<ruby>宿<rt>sù</rt>莽<rt>mǎng</rt></ruby>。  
 日月忽其不<ruby>淹<rt>yān</rt></ruby>兮，春与秋其代序。  
 惟草木之零落兮，恐美人之迟暮。  
-不<ruby>抚<rt>fǔ</rt></ruby>壮而弃<ruby>秽<rt>huì</rt></ruby>兮，何不改此度？  
+不<ruby>抚<rt>fǔ</rt></ruby>壮而弃<ruby>秽<rt>huì</rt></ruby>兮，何不改乎此度？  
 <ruby>乘<rt>chéng</rt>骐<rt>qí</rt>骥<rt>jì</rt></ruby>以驰骋兮，来吾道<ruby>夫<rt>fú</rt></ruby>先路！
 
 昔三后之<ruby>纯<rt>chún</rt>粹<rt>cuì</rt></ruby>兮，固众芳之所在。  
