--- a/_posts/2015-09-16-dufu-2.md
+++ b/_posts/2015-09-16-dufu-2.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "绝句--- 唐&middot;杜甫 "
+title:  "赠卫八处士--- 唐&middot;杜甫 "
 excerpt: "杜甫被贬华州司功参军之后，偶遇少年知交，故友相见，他乡遇故知，格外地亲。
 然而生逢乱世，各历艰辛，人生聚散，恍如隔世，百感交集。" 
 date:   2015-09-16
