--- a/_posts/2015-09-16-baijuyi-1.md
+++ b/_posts/2015-09-16-baijuyi-1.md
@@ -15,3 +15,9 @@ categories: jekyll update
   江南忆，其次忆吴宫。吴酒一杯春竹叶，    
 吴娃双舞醉芙蓉。早晚复相逢？
  
+ 
+ 
+<br> 
+<section class="psize">
+{{ page.excerpt}}   
+</section>
