--- a/_posts/2015-09-16-dufu-2.md
+++ b/_posts/2015-09-16-dufu-2.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "赠卫八处士--- 唐&middot;杜甫 "
 excerpt: "杜甫被贬华州司功参军之后，偶遇少年知交，故友相见，他乡遇故知，格外地亲。
-然而生逢乱世，各历艰辛，人生聚散，恍如隔世，百感交集。" 
+生逢乱世，各历艰辛，人生聚散，恍如隔世。这首诗真实记录了相聚时的场景和百感交集的心境。" 
 date:   2015-09-16
 categories: jekyll update
 --- 
