--- a/_posts/2015-09-16-dufu-2.md
+++ b/_posts/2015-09-16-dufu-2.md
@@ -10,7 +10,7 @@ categories: jekyll update
 人生不相见，动如<ruby>参<rt>shēn</rt></ruby>与<ruby>商<rt>shāng</rt></ruby>。今夕复何夕，共此灯烛光。  
 少壮能几时，<ruby>鬓<rt>bìn</rt></ruby>发各已苍。访旧半为鬼，惊呼热中肠。  
 <ruby>焉<rt>yān</rt></ruby>知二十载，重上君子堂。昔别君未婚，儿女忽成行。  
-怡然敬父执，问我来何方。问答乃未已，儿女罗酒浆。  
+怡然敬父执，问我来何方。问答未及已，儿女罗酒浆。  
 夜雨剪春韭，新炊间黄粱。主称会面难，一举累十<ruby>觞<rt>shāng</rt></ruby>。  
 十觞亦不醉，感子故意长。明日隔山岳，世事两茫茫。
 
