gh_delete_zhongyang_17/09/2015

--- a/_posts/2015-09-16-baijuyi-1.md
+++ b/_posts/2015-09-16-baijuyi-1.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "忆江南（三首）--- 唐&middot;白居易 "
 excerpt: "白居易曾经担任杭州刺史，在杭州呆了两年，后来又担任苏州刺史一年有余。
-          青年时期，漫游江南，这首词充满他对江南的怀念，。" 
+          青年时期，漫游江南，这首词充满他对江南的怀念。" 
 date:   2015-09-16
 categories: jekyll update
 --- 
