--- a/_posts/2015-08-08-caocao-2.md
+++ b/_posts/2015-08-08-caocao-2.md
@@ -14,10 +14,7 @@ categories: jekyll update
 山不<ruby>厌<rt>yàn</rt></ruby>高，海不厌深。周公吐<ruby>哺<rt>bǔ</rt></ruby>，天下归心。
 
 
-![guancanghai]({{ site.url }}/image/canghai.jpg)![guancanghai1]({{ site.url }}/image/canghai1.jpg)  
-<br>
-<audio controls preload="none">
-  <source src="{{ site.url }}/audio/caocao_guancanghai.m4a" type="audio/mpeg">
-</audio> 
+![guancanghai]({{ site.url }}/image/duangexing.jpg)
+
 
 
